[workspace]              # ajoute si absent
resolver = "2" 

[package]
name = "eazip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7", features = ["wry"] }
tauri-plugin-dialog = { version = "2.3.1" }
zip = { version = "2.1.3", features = ["aes-crypto", "deflate-zlib"] }
rand = { version = "0.8.5", features = ["getrandom"] }
sevenz-rust2 = "0.17.1"
uuid = { version = "1.8.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
tauri-plugin-log = "^2"
chrono = "0.4.38"
slab = "0.4.11"
walkdir = "2.5.0"
tempfile = "3.23.0"
